(Version 1.0) Fixing home screen css on mobile

--- a/client/src/components/home/styles/homecomponents.module.css
+++ b/client/src/components/home/styles/homecomponents.module.css
@@ -32,7 +32,7 @@
 }
 
 .optionDescriptionButtonBox h1 {
-    margin: 0 10px;
+    margin: 10px;
 }
 
 @media screen and (max-width: 960px) {
@@ -46,12 +46,17 @@
         border-bottom: none;
         border-right: 2px solid black;
     }
-
     .optionDescriptionButtonBox h1 {
         font-size: medium;
-        margin-bottom: 10px;
     }
     .optionDescriptionButtonBox button{
-        margin: 0 5px;
+        margin: 0 10px;
+    }
+}
+
+
+@media screen and (max-width: 768px) {
+    .optionDescriptionButtonBox h1 {
+        font-size: small;
     }
 }
